--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gimel-calc",
   "version": "0.1.0",
+  "homepage": "https://aviadpriel.github.io/gimel-calculetor",
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^2.13.2",
@@ -24,14 +25,16 @@
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
-"scripts": {
-"dev": "react-scripts start",
-"start": "serve -s build",
-"build": "react-scripts build",
-"test": "react-scripts test --env=jsdom",
-"eject": "react-scripts eject",
-"heroku-postbuild": "npm run build"
-},
+  "scripts": {
+    "dev": "react-scripts start",
+    "start": "serve -s build",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build",
+     "predeploy": "npm run build",
+   "deploy": "gh-pages -d build"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -49,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
